feat: retrieveLicenseImages 컨트롤러 추가